; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_table.c_onEdited.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_table.c_onEdited.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*, i32*, i32*)* @onEdited to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @onEdited(i32* %0, i32 %1, i8* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32* @gtk_tree_path_new_from_string(i8* %13)
  store i32* %14, i32** %11, align 8
  %15 = load i32*, i32** %11, align 8
  %16 = call i32* @gtk_tree_path_get_indices(i32* %15)
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %12, align 4
  %19 = load i32*, i32** %10, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %5
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @GTK_TREE_MODEL(i32* %22)
  %24 = load i32*, i32** %10, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @gtk_tree_model_get_iter(i32 %23, i32* %24, i32* %25)
  br label %27

27:                                               ; preds = %21, %5
  %28 = load i32*, i32** %11, align 8
  %29 = call i32 @gtk_tree_path_free(i32* %28)
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* %12, align 4
  %32 = load i32, i32* %7, align 4
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @uiprivTableModelSetCellValue(i32* %30, i32 %31, i32 %32, i32* %33)
  ret void
}

declare dso_local i32* @gtk_tree_path_new_from_string(i8*) #1

declare dso_local i32* @gtk_tree_path_get_indices(i32*) #1

declare dso_local i32 @gtk_tree_model_get_iter(i32, i32*, i32*) #1

declare dso_local i32 @GTK_TREE_MODEL(i32*) #1

declare dso_local i32 @gtk_tree_path_free(i32*) #1

declare dso_local i32 @uiprivTableModelSetCellValue(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
